{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 62,
  "lineage": "2a000933-889b-5821-f3ab-c8c4856bbda5",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:773913840750:security-group/sg-0b751efb13d3fc7e9",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09369092398ff1c8f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09369092398ff1c8f"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-0b751efb13d3fc7e9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09369092398ff1c8f"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-lab-cluster-2025120412184169520000000a",
            "name_prefix": "eks-lab-cluster-",
            "owner_id": "773913840750",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab-cluster",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab-cluster",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-028ebcd02fe624018"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:773913840750:security-group/sg-09369092398ff1c8f",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b751efb13d3fc7e9"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-09369092398ff1c8f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b751efb13d3fc7e9"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b751efb13d3fc7e9"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "eks-lab-node-2025120412184211070000000b",
            "name_prefix": "eks-lab-node-",
            "owner_id": "773913840750",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab-node",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab",
              "kubernetes.io/cluster/eks-lab": "owned"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab-node",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab",
              "kubernetes.io/cluster/eks-lab": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-028ebcd02fe624018"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1760559206",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b751efb13d3fc7e9",
            "security_group_rule_id": "sgr-041960a6f07b1082c",
            "self": false,
            "source_security_group_id": "sg-09369092398ff1c8f",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2232544344",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b751efb13d3fc7e9",
            "security_group_rule_id": "sgr-050c17298c7eb3907",
            "self": false,
            "source_security_group_id": "sg-09369092398ff1c8f",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1826436370",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b751efb13d3fc7e9",
            "security_group_rule_id": "sgr-05a56b5610a0025c9",
            "self": false,
            "source_security_group_id": "sg-09369092398ff1c8f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-463290720",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09369092398ff1c8f",
            "security_group_rule_id": "sgr-0712bb6a253d35af5",
            "self": false,
            "source_security_group_id": "sg-0b751efb13d3fc7e9",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-3662089090",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09369092398ff1c8f",
            "security_group_rule_id": "sgr-0c58ee137bd6bc238",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-93927068",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09369092398ff1c8f",
            "security_group_rule_id": "sgr-060ba3492756ec599",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-2064061329",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-09369092398ff1c8f",
            "security_group_rule_id": "sgr-06b4e0149e74111e8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-625193534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09369092398ff1c8f",
            "security_group_rule_id": "sgr-006b9039b4fc30721",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2871275608",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-09369092398ff1c8f",
            "security_group_rule_id": "sgr-08733a65a23842f34",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-599701450",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09369092398ff1c8f",
            "security_group_rule_id": "sgr-0712bb6a253d35af5",
            "self": false,
            "source_security_group_id": "sg-0b751efb13d3fc7e9",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4198890302",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09369092398ff1c8f",
            "security_group_rule_id": "sgr-085cd7d3d159ad557",
            "self": false,
            "source_security_group_id": "sg-0b751efb13d3fc7e9",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-153116518",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09369092398ff1c8f",
            "security_group_rule_id": "sgr-05345a77581c0964b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2910846089",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-09369092398ff1c8f",
            "security_group_rule_id": "sgr-059c9a9c6aa208f7f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"default\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:773913840750:security-group/sg-0333d3972fb80c1c3",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-0333d3972fb80c1c3",
            "ingress": [],
            "name": "default-eks-node-group-20251204121841284100000009",
            "name_prefix": "default-eks-node-group-",
            "owner_id": "773913840750",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sandbox",
              "Name": "default-eks-node-group",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "default-eks-node-group",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-028ebcd02fe624018"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:773913840750:network-acl/acl-08a90b3364fc81e4e",
            "default_network_acl_id": "acl-08a90b3364fc81e4e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08a90b3364fc81e4e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "773913840750",
            "subnet_ids": [
              "subnet-048ac73f7bf65fea5",
              "subnet-071e704450a7536e8",
              "subnet-088ed54082eeba766",
              "subnet-09156b1383ce09b93",
              "subnet-095c057cbc5208e3a",
              "subnet-0cfba01369369ff1b"
            ],
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab-default",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab-default",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "vpc_id": "vpc-028ebcd02fe624018"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:773913840750:route-table/rtb-049f4e05c013fa12e",
            "default_route_table_id": "rtb-049f4e05c013fa12e",
            "id": "rtb-049f4e05c013fa12e",
            "owner_id": "773913840750",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab-default",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab-default",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-028ebcd02fe624018"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:773913840750:security-group/sg-01c398245caab62c7",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-01c398245caab62c7",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "773913840750",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab-default",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab-default",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "vpc_id": "vpc-028ebcd02fe624018"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d33e474b8310d65c",
            "association_id": "eipassoc-0c33a4f9664e03077",
            "domain": "vpc",
            "id": "eipalloc-0d33e474b8310d65c",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-075243b21eec0e69b",
            "private_dns": "ip-10-0-4-102.eu-west-2.compute.internal",
            "private_ip": "10.0.4.102",
            "public_dns": "ec2-3-11-205-248.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.11.205.248",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab-eu-west-2a",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab-eu-west-2a",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:773913840750:internet-gateway/igw-0fcbfe7419e54cdb0",
            "id": "igw-0fcbfe7419e54cdb0",
            "owner_id": "773913840750",
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "vpc_id": "vpc-028ebcd02fe624018"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d33e474b8310d65c",
            "association_id": "eipassoc-0c33a4f9664e03077",
            "connectivity_type": "public",
            "id": "nat-0518e1df2116f89a2",
            "network_interface_id": "eni-075243b21eec0e69b",
            "private_ip": "10.0.4.102",
            "public_ip": "3.11.205.248",
            "subnet_id": "subnet-09156b1383ce09b93",
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab-eu-west-2a",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab-eu-west-2a",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00c1b754d2b31b74d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0518e1df2116f89a2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00c1b754d2b31b74d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fcbfe7419e54cdb0",
            "id": "r-rtb-0b9cbd15a0ce12e361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b9cbd15a0ce12e36",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:773913840750:route-table/rtb-00c1b754d2b31b74d",
            "id": "rtb-00c1b754d2b31b74d",
            "owner_id": "773913840750",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0518e1df2116f89a2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab-private",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab-private",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-028ebcd02fe624018"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:773913840750:route-table/rtb-0b9cbd15a0ce12e36",
            "id": "rtb-0b9cbd15a0ce12e36",
            "owner_id": "773913840750",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fcbfe7419e54cdb0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab-public",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab-public",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-028ebcd02fe624018"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bac4511dce7f009",
            "route_table_id": "rtb-00c1b754d2b31b74d",
            "subnet_id": "subnet-048ac73f7bf65fea5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e135c6e5bc1c1ff6",
            "route_table_id": "rtb-00c1b754d2b31b74d",
            "subnet_id": "subnet-071e704450a7536e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fca80449fa25ce2",
            "route_table_id": "rtb-00c1b754d2b31b74d",
            "subnet_id": "subnet-088ed54082eeba766"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0169263d22ef78a46",
            "route_table_id": "rtb-0b9cbd15a0ce12e36",
            "subnet_id": "subnet-09156b1383ce09b93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d5dcbb115a37b02",
            "route_table_id": "rtb-0b9cbd15a0ce12e36",
            "subnet_id": "subnet-095c057cbc5208e3a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c393686100b182f9",
            "route_table_id": "rtb-0b9cbd15a0ce12e36",
            "subnet_id": "subnet-0cfba01369369ff1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:773913840750:subnet/subnet-048ac73f7bf65fea5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048ac73f7bf65fea5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "773913840750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab-private-eu-west-2a",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab-private-eu-west-2a",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-028ebcd02fe624018"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:773913840750:subnet/subnet-071e704450a7536e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071e704450a7536e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "773913840750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab-private-eu-west-2b",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab-private-eu-west-2b",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-028ebcd02fe624018"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:773913840750:subnet/subnet-088ed54082eeba766",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088ed54082eeba766",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "773913840750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab-private-eu-west-2c",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab-private-eu-west-2c",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-028ebcd02fe624018"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:773913840750:subnet/subnet-09156b1383ce09b93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09156b1383ce09b93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "773913840750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab-public-eu-west-2a",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab-public-eu-west-2a",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-028ebcd02fe624018"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:773913840750:subnet/subnet-095c057cbc5208e3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095c057cbc5208e3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "773913840750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab-public-eu-west-2b",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab-public-eu-west-2b",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-028ebcd02fe624018"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:773913840750:subnet/subnet-0cfba01369369ff1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfba01369369ff1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "773913840750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab-public-eu-west-2c",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab-public-eu-west-2c",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-028ebcd02fe624018"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:773913840750:vpc/vpc-028ebcd02fe624018",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a90b3364fc81e4e",
            "default_route_table_id": "rtb-049f4e05c013fa12e",
            "default_security_group_id": "sg-01c398245caab62c7",
            "dhcp_options_id": "dopt-0d39bf62610c7f93e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-028ebcd02fe624018",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-049f4e05c013fa12e",
            "owner_id": "773913840750",
            "tags": {
              "Environment": "sandbox",
              "Name": "eks-lab",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "eks-lab",
              "Owner": "tomakady",
              "Project": "EKS Advanced Lab"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}